--- a/src/Resources_ru.properties
+++ b/src/Resources_ru.properties
@@ -393,12 +393,14 @@ PreferencesDialog.Network.showPassword=\u041f\u043e\u043a\u0430\u0437\u0430\u044
 PreferencesDialog.Network.showPassword.toolTip=\u0423\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0435 \u044d\u0442\u043e\u0442 \u0444\u043b\u0430\u0436\u043e\u043a, \u0447\u0442\u043e\u0431\u044b \u043f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u043f\u0430\u0440\u043e\u043b\u044c
 
 PeriodicalTransactionDialog.activated=\u0410\u043a\u0442\u0438\u0432\u0438\u0440\u043e\u0432\u0430\u043d
+PeriodicalTransactionDialog.activated.toolTip=\u0421\u043d\u0438\u043c\u0438\u0442\u0435 \u0444\u043b\u0430\u0436\u043e\u043a, \u0447\u0442\u043e\u0431\u044b \u043f\u0440\u0438\u043e\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u0441\u043e\u0437\u0434\u0430\u043d\u0438\u0435 \u044d\u0442\u043e\u0439 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438
 PeriodicalTransactionDialog.day.toolTip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0434\u0435\u043d\u044c \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438
 PeriodicalTransactionDialog.days=\u0434\u043d\u0435\u0439
 PeriodicalTransactionDialog.months=\u043c\u0435\u0441\u044f\u0446\u0435\u0432
 PeriodicalTransactionDialog.nextDate=\u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0430\u044f \u0434\u0430\u0442\u0430\: 
 PeriodicalTransactionDialog.nextDate.toolTip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0443\u044e \u0434\u0430\u0442\u0443 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438 \u0437\u0434\u0435\u0441\u044c
 PeriodicalTransactionDialog.step.toolTip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0435\u0440\u0438\u043e\u0434\u0438\u0447\u043d\u043e\u0441\u0442\u044c \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438 (\u0432 \u0434\u043d\u044f\u0445)
+PeriodicalTransactionDialog.until=\u0434\u043e
 PeriodicalTransactionDialog.lastDate.toolTip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0434\u0430\u0442\u0443 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u044d\u0442\u043e\u0439 \u043f\u043e\u0432\u0442\u043e\u0440\u043d\u043e\u0439 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438. \u041e\u0441\u0442\u0430\u0432\u044c\u0442\u0435 \u044d\u0442\u043e \u043f\u043e\u043b\u0435 \u043f\u0443\u0441\u0442\u044b\u043c, \u0435\u0441\u043b\u0438 \u0434\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u043d\u0435 \u043f\u043b\u0430\u043d\u0438\u0440\u0443\u0435\u0442\u0441\u044f.
 PeriodicalTransactionDialog.title.new=\u041d\u043e\u0432\u0430\u044f \u043f\u0435\u0440\u0438\u043e\u0434\u0438\u0447\u0435\u0441\u043a\u0430\u044f \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u044f
 PeriodicalTransactionDialog.title.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043f\u0435\u0440\u0438\u043e\u0434\u0438\u0447\u0435\u0441\u043a\u0443\u044e \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u044e
@@ -492,6 +494,7 @@ CustomFilterPanel.category.toolTip=\u0412\u044b\u0431\u043e\u0440 \u0440\u0430\u
 CustomFilterPanel.mode.toolTip=\u0412\u044b\u0431\u043e\u0440 \u0440\u0435\u0436\u0438\u043c\u0430 \u043e\u043f\u043b\u0430\u0442\u044b
 
 CustomFilterPanel.description.toolTip=\u0422\u0435\u043a\u0441\u0442 \u0434\u043b\u044f \u0441\u0440\u0430\u0432\u043d\u0435\u043d\u0438\u044f \u0441 \u043e\u043f\u0438\u0441\u0430\u043d\u0438\u0435\u043c \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438
+CustomFilterPanel.description.contains=\u0421\u043e\u0434\u0435\u0440\u0436\u0438\u0442
 CustomFilterPanel.description.contains.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435, \u0435\u0441\u043b\u0438 \u043e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0434\u043e\u043b\u0436\u043d\u043e \u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c \u0432\u0432\u0435\u0434\u0435\u043d\u043d\u044b\u0439 \u0442\u0435\u043a\u0441\u0442
 CustomFilterPanel.description.equals=\u041f\u0440\u0438\u0440\u0430\u0432\u043d\u044f\u0442\u044c \u043a
 CustomFilterPanel.description.equals.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435, \u0435\u0441\u043b\u0438 \u043e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0442\u0430\u043a\u0438\u043c \u0436\u0435, \u043a\u0430\u043a \u0432\u0432\u0435\u0434\u0435\u043d\u043d\u044b\u0439 \u0442\u0435\u043a\u0441\u0442
@@ -506,6 +509,7 @@ CustomFilterPanel.amount.all=\u0412\u0441\u0435
 CustomFilterPanel.amount.all.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044d\u0442\u043e\u0442 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440, \u0447\u0442\u043e\u0431\u044b \u043d\u0435 \u0444\u0438\u043b\u044c\u0442\u0440\u043e\u0432\u0430\u0442\u044c \u0441\u0443\u043c\u043c\u044b \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438
 CustomFilterPanel.amount.equals=\u041f\u0440\u0438\u0440\u0430\u0432\u043d\u044f\u0442\u044c \u043a
 CustomFilterPanel.amount.equals.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044d\u0442\u0443 \u043e\u043f\u0446\u0438\u044e, \u0447\u0442\u043e\u0431\u044b \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u0442\u043e\u043b\u044c\u043a\u043e \u0442\u0435 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438, \u0433\u0434\u0435 \u0441\u0443\u043c\u043c\u0430 \u0440\u0430\u0432\u043d\u0430 \u0432\u0432\u0435\u0434\u0435\u043d\u043d\u043e\u043c\u0443 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044e
+CustomFilterPanel.amout.between=\u041f\u0435\u0440\u0438\u043e\u0434
 CustomFilterPanel.amout.between.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044d\u0442\u0443 \u043e\u043f\u0446\u0438\u044e, \u0447\u0442\u043e\u0431\u044b \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u0442\u043e\u043b\u044c\u043a\u043e \u0442\u0435 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438, \u0433\u0434\u0435 \u0441\u0443\u043c\u043c\u0430 \u043d\u0430\u0445\u043e\u0434\u0438\u0442\u0441\u044f \u043c\u0435\u0436\u0434\u0443 \u0432\u0432\u0435\u0434\u0435\u043d\u043d\u044b\u043c\u0438 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f\u043c\u0438
 CustomFilterPanel.amount.maximum=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0430\u044f \u0441\u0443\u043c\u043c\u0430
 CustomFilterPanel.amount.to=\u0438
@@ -597,6 +601,7 @@ ExportDialog.title=\u042d\u043a\u0441\u043f\u043e\u0440\u0442...
 ExportDialog.allRadioButton=\u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u0432\u0441\u0435\u0445 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0439
 ExportDialog.allRadioButton.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044d\u0442\u043e\u0442 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440, \u0447\u0442\u043e\u0431\u044b \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432\u0441\u0435 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438
 ExportDialog.columnSeparator=\u0420\u0430\u0437\u0434\u0435\u043b\u0438\u0442\u0435\u043b\u044c \u0441\u0442\u043e\u043b\u0431\u0446\u043e\u0432
+ExportDialog.columnSeparator.customized=\u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c\:
 ExportDialog.columnSeparator.customized.toolTip=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u044d\u0442\u043e\u0442 \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440, \u0447\u0442\u043e\u0431\u044b \u0443\u043a\u0430\u0437\u0430\u0442\u044c \u0440\u0430\u0437\u0434\u0435\u043b\u0438\u0442\u0435\u043b\u044c \u0441\u0442\u043e\u043b\u0431\u0446\u043e\u0432 \u043f\u043e \u0432\u0430\u0448\u0435\u043c\u0443 \u0432\u044b\u0431\u043e\u0440\u0443
 ExportDialog.columnSeparator.customizedChar.toolTip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0440\u0435\u0434\u043f\u043e\u0447\u0438\u0442\u0430\u0435\u043c\u044b\u0439 \u0440\u0430\u0437\u0434\u0435\u043b\u0438\u0442\u0435\u043b\u044c
 ExportDialog.columnSeparator.defaultSeparator=\u041f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e (\u0432\u043a\u043b\u0430\u0434\u043a\u0430)
@@ -641,15 +646,28 @@ ImportDialog.errorMessage.cancel.tooltip=\u041e\u0442\u043c\u0435\u043d\u044f\u0
 #Account administration panel / checkbook's table
 checkbookDialog.border.title=\u0427\u0435\u043a\u043e\u0432\u044b\u0435 \u043a\u043d\u0438\u0436\u043a\u0438
 checkbookDialog.Delete.tooltip=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u0439 \u0447\u0435\u043a\u043e\u0432\u043e\u0439 \u043a\u043d\u0438\u0436\u043a\u0438
+checkbookDialog.book.short=\u0427\u0435\u043a\u043e\u0432\u0430\u044f \u043a\u043d\u0438\u0436\u043a\u0430
+checkbookDialog.next.short=\u0421\u043b\u0435\u0434\u0443\u044e\u0449\u0430\u044f \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0430
+checkbookDialog.New.tooltip=\u0421\u043e\u0437\u0434\u0430\u0435\u0442 \u043d\u043e\u0432\u0443\u044e \u0447\u0435\u043a\u043e\u0432\u0443\u044e \u043a\u043d\u0438\u0436\u043a\u0443
 #Checkbook edition dialog
+checkbookDialog.title.new=\u041d\u043e\u0432\u0430\u044f \u0447\u0435\u043a\u043e\u0432\u0430\u044f \u043a\u043d\u0438\u0436\u043a\u0430
+checkbookDialog.title.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0447\u0435\u043a\u043e\u0432\u0443\u044e \u043a\u043d\u0438\u0436\u043a\u0443
+checkbookDialog.prefix=\u041f\u0440\u0435\u0444\u0438\u043a\u0441
+checkbookDialog.prefix.tooltip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0440\u0435\u0444\u0438\u043a\u0441. \u042d\u0442\u043e\u0442 \u043f\u0440\u0435\u0444\u0438\u043a\u0441 \u0434\u043e\u0431\u0430\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0432 \u043a\u0430\u0436\u0434\u044b\u0439 \u0447\u0435\u043a \u0432 \u0447\u0435\u043a\u043e\u0432\u043e\u0439 \u043a\u043d\u0438\u0436\u043a\u0435
 #Dialog displayed when the last check in a checkbook is used
+checkbookDialog.finished.createNew=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043d\u043e\u0432\u0443\u044e \u043a\u043d\u0438\u0433\u0443
+checkbookDialog.finished.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0447\u0435\u043a\u043e\u0432\u0443\u044e \u043a\u043d\u0438\u0436\u043a\u0443
+checkbookDialog.finished.DeleteAndCreateNew=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0435\u0435 \u0438 \u0441\u043e\u0437\u0434\u0430\u0442\u044c \u043d\u043e\u0432\u0443\u044e \u043a\u043d\u0438\u0433\u0443
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
 
 # Menu item to set a password to protect the data
+MainMenu.Protect=\u0417\u0430\u0449\u0438\u0442\u0430 \u043f\u0430\u0440\u043e\u043b\u0435\u043c...
 
 # Dialogs dealing with setting or getting the file password
+FilePasswordDialog.setPassword.question=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0430\u0440\u043e\u043b\u044c \u0434\u043b\u044f \u043e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u0438\u044f \u0434\u043e\u0441\u0442\u0443\u043f\u0430 \u043a \u0444\u0430\u0439\u043b\u0443
+FilePasswordDialog.setPassword.tooltip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0430\u0440\u043e\u043b\u044c \u0437\u0434\u0435\u0441\u044c \u0438\u043b\u0438 \u043e\u0441\u0442\u0430\u0432\u0438\u0442\u044c \u0435\u0433\u043e \u043f\u0443\u0441\u0442\u044b\u043c, \u0447\u0442\u043e\u0431\u044b \u043f\u0440\u0435\u0434\u043e\u0441\u0442\u0430\u0432\u0438\u0442\u044c \u0441\u0432\u043e\u0431\u043e\u0434\u043d\u044b\u0439 \u0434\u043e\u0441\u0442\u0443\u043f \u043a \u0444\u0430\u0439\u043b\u0443
 # A warning message to warn about the fact that forgetting the password leads to permanent data loss.
 FilePasswordDialog.openFile.tooltip=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043f\u0430\u0440\u043e\u043b\u044c \u0437\u0434\u0435\u0441\u044c.
 FilePasswordDialog.confirm=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043d\u0438\u0435 \u043f\u0430\u0440\u043e\u043b\u044f
@@ -770,9 +788,13 @@ Welcome.lastTip.tooltip=\u041e\u0442\u043e\u0431\u0440\u0430\u0436\u0430\u0435\u
 #-------- New "important news" screen -------
 
 #-------- New preference panel about transaction editing -------
+TransactionEditingPreferencesPanel.format.title=\u0424\u043e\u0440\u043c\u0430\u0442
+TransactionEditingPreferencesPanel.format.customized=\u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c
+TransactionEditingPreferencesPanel.format.customized.invalidFormat=\u041d\u0435\u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u044b\u0439 \u0444\u043e\u0440\u043c\u0430\u0442
 #translators note: be aware in the following line that the format codes don't depend on the language (yyyy is always yyyy, even in french where it could have been aaaa).
 
 #Alert dialogs
+DeleteTransactionAlert.title=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0442\u0440\u0430\u043d\u0437\u0430\u043a\u0446\u0438\u0438
 
 # This new preference dialog tab allows the user to set what is remembered between Yapbam launches
 
