--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,14 +5,20 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.19.4 (03/05/2017)
+improvement
+	Adds the ability to scroll the list of accounts in the "Filter" menu when there are too many.
+	Adds more translation into Italian.
+	Adds more translations into Russian.
+
 version	0.19.3 (02/18/2017)
 improvement
-	Introduces partial translation to Italian.
-	Adds more translations to Russian.
+	Introduces partial translation into Italian.
+	Adds more translations into Russian.
 
 version	0.19.2 (12/31/2016)
 improvement
-	Introduces partial translation to Polish.
+	Introduces partial translation into Polish.
 fix
 	Connect to a new Dropbox account with 0.19.0 or 019.1, with a language not set to French, resulted in an error.
 
@@ -23,14 +29,14 @@ fix
 version	0.19.0 (12/10/2016)
 improvement
 	Compatibility with version 2 of Dropbox API (Dropbox will stop supporting previous versions on 6/28/2017).
-	Adds more translations to Russian.
+	Adds more translations into Russian.
 fix
 	Yapbam team messages were no longer displayed when Yapbam was launched from a Java version earlier than 1.8.0_101.
 	Yapbam is now able to follow http to https redirections while getting team messages or checking for updates.
 	
 version	0.18.11 (11/06/2016)
 improvement
-	Adds translations to Russian.
+	Adds translations into Russian.
 
 version	0.18.10 (06/05/2016)
 fix
