--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,10 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.19.7 (10/08/2017)
+fix
+	Currency converter of previous versions was broken because Yahoo rates provider's URL changed.
+
 version	0.19.6 (07/09/2017)
 fix
 	Switches to Dropbox SDK version 3.0.3 that fixes some bugs.
