--- a/src/net/yapbam/gui/tools/messages_fr.properties
+++ b/src/net/yapbam/gui/tools/messages_fr.properties
@@ -20,7 +20,7 @@ ToolsPlugIn.currencyConverter.title=Convertisseur de devises
 ToolsPlugIn.currencyConverter.toolTip=Ouvre le convertisseur de devises
 ToolsPlugIn.menu.title=Outils
 ToolsPlugIn.menu.toolTip=Ce menu permet l'acc\u00e8s aux utilitaires de Yapbam
-ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication avec la Banque Centrale Europ\u00e9enne.<br>Assurez-vous que votre connexion \u00e0 Internet fonctionne.</html>
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication.<br>Assurez-vous que votre connexion \u00e0 Internet fonctionne.</html>
 ToolsPlugin.currencyConverter.wait.message=<html>R\u00e9cup\u00e9ration des cours des devises.<br>Merci de patienter.</html>
 YAHOO.name=Yahoo
 
