--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,6 +5,10 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
+version	0.19.8 (28/10/2017)
+fix
+	La lecture d'un fichier crypté à l'aide de Java 9 entraînait une erreur.
+
 version	0.19.7 (08/10/2017)
 fix
 	Un changement d'URL de la source taux de change de Yahoo empêche le convertisseur de devise des versions précédentes de fonctionner.
