--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -595,6 +595,9 @@ BudgetPanel.perMonth=Vue par mois
 BudgetPanel.perMonth.tooltip=Cliquez ici pour obtenir la ventilation par mois
 BudgetPanel.perYear=Vue par an
 BudgetPanel.perYear.tooltip=Cliquez ici pour obtenir la ventilation par ann\u00e9e
+BudgetPanel.perTransactionDate=Date de l'op\u00e9ration
+BudgetPanel.perTransactionDate.tooltip=Cliquez ici pour obtenir la ventilation bas\u00e9e sur la date des op\u00e9rations
+BudgetPanel.perValueDate.tooltip=Cliquez ici pour obtenir la ventilation bas\u00e9e sur la date de valeur des op\u00e9rations
 BudgetPanel.averageColumn.checkBox=Colonne de moyennes
 BudgetPanel.averageColumn.checkBox.tooltip=Cochez cette case pour ajouter au tableau une colonne contenant les moyennes par cat\u00e9gories.
 BudgetPanel.sumColumn.checkBox=Colonne de totaux
@@ -1338,7 +1341,22 @@ LinkEditor.url.tooltip=Entrez l'URL de destination dans ce champ
 
 generic.recommended.with.parenthesis=(Recommand\u00e9)
 
-
-
-
+MainMenuBar.predefinedFilters.menu.title=Vos filtres
+MainMenuBar.predefinedFilters.menu.tooltip=S\u00e9lectionnez ce menu pour appliquer un filtre que vous avez pr\u00e9c\u00e9demment enregistr\u00e9
+CustomFilterPanel.error.filterNameExists=Ce bouton est d\u00e9sactiv\u00e9 parce qu\u2019il y a d\u00e9j\u00e0 un filtre nomm\u00e9 {0}
+CustomFilterPanel.error.filterNameField.title=Enregistrer sous
+CustomFilterPanel.error.filterNameIsMissing=Ce bouton est d\u00e9sactiv\u00e9 parce que vous n\u2019avez pas entr\u00e9 un nom pour ce filtre
+CustomFilterPanel.save.overwrite.question=Il y a d\u00e9j\u00e0 un filtre enregistr\u00e9 avec ce nom. Vous voulez l\u2019\u00e9craser\u00a0?
+CustomFilterPanel.save.nameField.tooltip=Si vous souhaitez enregistrer ce filtre pour une utilisation ult\u00e9rieure, entrez un nom ici et cliquez sur le bouton {0}.
+CustomFilterPanel.save.saveButton.disabled.tooltip=Ce bouton est d\u00e9sactiv\u00e9 car le nom est vide
+CustomFilterPanel.save.saveButton.title=Enregistrer
+CustomFilterPanel.save.saveButton.tooltip=Cliquez sur ce bouton pour enregistrer ce filtre
+FilterManager.column.name.title=Nom
+FilterManager.delete.tooltip=Supprime le filtre s\u00e9lectionn\u00e9
+FilterManager.duplicates.tooltip=Duplique le filtre s\u00e9lectionn\u00e9
+FilterManager.edit.tooltip=\u00c9dite le filtre s\u00e9lectionn\u00e9
+FilterManager.nameField.label=Nom \:
+FilterManager.new.tooltip=Cr\u00e9e un nouveau filtre pr\u00e9d\u00e9fini
+FilterManager.tab.name=Cet onglet permet de g\u00e9rer les filtres pr\u00e9d\u00e9finis
+FilterManager.tab.tooltip=Filtres
 
