--- a/src/localization/fr/relnotes.txt
+++ b/src/localization/fr/relnotes.txt
@@ -5,6 +5,12 @@ known
 	Sur MacOS, Le raccourci clavier du copier/coller est CTRL C/V et non commande C/V. Malheureusement, c'est un bug de Java qui ne peut être corrigé.
 	Sur Windows, les thèmes autre que Nimbus rendent incorrect l'alignement vertical des colonnes "description" et "commentaire" (Cela semble un bug de Java).
 	
+version	0.20.2 (24/12/2017)
+improvement
+	Ajoute des traductions en espagnol.
+fix
+	Corrige le problème de date de fin erronnée dans le filtre quand ce filtre était obtenu via le bouton "Filtre" de l'onglet "Budget".
+
 version	0.20.1 (22/12/2017)
 improvement
 	La traduction en turc est presque complète. Ajoute des traductions partielles en espagnol et hongrois.
