--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,13 @@ known
 	On MacOS, The copy/paste shortcut is ctrl C/V and not Command C/V. Unfortunately, this is a bug in java JTextField and can't be fixed.
 	On windows, using other themes than Nimbus makes description and comment columns not to be correctly vertically aligned (seems to be a Java bug).
 
+version	0.20.3 (01/07/2018)
+improvement
+	Spanish translation is now complete.
+	Adds more translations into Polish and some into Arabic. 
+fix
+	Clicking on a cell of the postponed column in the "Generate periodical transactions" did not selected the line. Under Debian 9.3, it resulted in an error.
+
 version	0.20.2 (12/24/2017)
 improvement
 	Adds more translations into Spanish.
