--- a/src/net/yapbam/gui/tools/messages_pl.properties
+++ b/src/net/yapbam/gui/tools/messages_pl.properties
@@ -1,7 +1,11 @@
 #X-Generator: crowdin.com
 #Eclipse messages class
 #Mon Dec 23 18:39:35 CET 2013
+CurrencyConverterPanel.CodeColumnName=Kod
 CurrencyConverterPanel.CurrencyColumnName=Waluta
+CurrencyConverterPanel.CurrencyToColumnName=Waluta 1 = ? {0}
+CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = waluta
+CurrencyConverterPanel.amount.toolTip=Wpisz kwot\u0119 do zamiany i naci\u015bnij klawisz <Tab>
 CurrencyConverterPanel.destination.toolTip=Wybierz docelow\u0105 walut\u0119 
 CurrencyConverterPanel.errorMessage=Wyst\u0105pi\u0142 b\u0142\u0105d \u201e{0}\u201d.
 CurrencyConverterPanel.origin.toolTip=Wybierz \u017ar\u00f3d\u0142ow\u0105 walut\u0119 tutaj
